<resources>
    <string name="app_name">GROUP5_GPS</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_maps">Map</string>
    <string name="bttn_connect">Connéctez !</string>
    <string name="Page_de_connexion"><u>Page De Connéxion :</u></string>
    <string name="pseudo">Pseudo :</string>
    <string name="password">Passowrd :</string>
    <string name="inscrire_bttn">Inscrire !</string>
    <string name="Page_d_Inscription"><u>Page D\'inscription</u></string>
    <string name="pseudo_Inscription">Pseudo :</string>
    <string name="password_Inscription">Passowrd :</string>
    <string name="mdp_inscription_hint">Entrez votre password</string>
    <string name="nickname_inscription_box">Entrez votre Pseudo</string>
    <string name="mdp_inscription_confim">Confirme :</string>
    <string name="mdp_inscription_box">Reconfirme Password</string>
    <string name="nickname_cnt_box">Entrez votre Pseudo</string>
    <string name="voir_les_amis">Voir les amis</string>
    <string name="quitter">Quitter</string>
    <string name="quitter_mainActivity">Quitter</string>
    <string name="back">Back</string>
    <string name="finding_service">Finding local services</string>
    <string name="btn_send">Send</string>
    <string name="txt_hint">Type Message</string>
    <string name="p2p_chat">P2P Chat</string>
    <string name="enovoyez_tcht_box">Enovoyez</string>
    <string name="tchache">tchache</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="amis">Amis</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
</resources>
