
<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neo.group5_gps.ConnexionActivity"
    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/L_Conx_Page">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Page_de_connexion"
            android:id="@+id/connextion_page"
            android:textColor="#00fbff"
            android:textSize="24sp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:id="@+id/L_pseudo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pseudo"
                    android:id="@+id/nickname_cinct"
                    android:textColor="#fccb07"
                    android:textSize="16sp"
                    android:layout_gravity="left" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="24sp"
                    android:paddingLeft="5dp"

                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/pseudo_cnct"
                    android:textColor="#000000"
                    android:background="#ffffff"
                    android:hint="@string/nickname_cnt_box" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/passoword_cnct"
                    android:textColor="#fccb07"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="24sp"
                    android:paddingLeft="5dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/mdp_cnct"
                    android:textSize="16dp"
                    android:background="#fbfbfb"
                    android:hint="Entrez votre password" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bttn_connect"
                    android:id="@+id/submit_bt_connect"
                    android:onClick="userLogin" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>